Fixed z-index on inactive windows for mobile.

--- a/interfaces/web_desktop/css/icons.css
+++ b/interfaces/web_desktop/css/icons.css
@@ -11,6 +11,11 @@
 	width: calc(100% - 200px);
 }
 
+.Content.SlideAnimation
+{
+	pointer-events: none;
+}
+
 .IconWindow .Content > .FileBrowserContainer
 {
 	position: absolute;
